# CrewAI-Implementation

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.dev  LICENSE  PLATFORM_OVERVIEW.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  workflow_report.md
.github/workflows/: ci.yml
alembic/: env.py
docker/: Dockerfile  docker-compose.yml
docs/: implementation-steps.md  output_management_guide.md  phase1-2-completion.md
docs/design/: HLD.md  LLD.md
docs/workflows/: creating-workflows.md
examples/: README.md  output_management_example.py
sample_outputs/: agent_1_research_specialist.html  agent_1_research_specialist.json  agent_2_seo_specialist.html  agent_2_seo_specialist.json  agent_3_content_writer.html  agent_3_content_writer.json  complete_workflow_report.html  workflow_analytics.json
scripts/: start_dev.py
src/: __init__.py
src/core/: __init__.py
src/core/monitoring/: __init__.py  workflow_monitor.py
src/core/orchestrator/: __init__.py  crew_manager.py
src/core/output_management/: __init__.py  output_formatter.py  output_processor.py  output_validator.py  result_aggregator.py  structured_output.py
src/core/tools/: social_media_tool.py
src/gateway/: __init__.py  main.py
src/integrations/: __init__.py
src/integrations/community/: __init__.py
src/integrations/official/: __init__.py
src/integrations/official/apis/: salesforce_integration.py
src/services/: __init__.py
src/shared/: __init__.py  config.py
src/shared/celery/: __init__.py  celery_app.py
src/shared/database/: __init__.py  base.py  models.py
src/shared/utils/: __init__.py  logging.py
src/tools/: __init__.py
src/tools/community/: __init__.py
src/tools/official/: __init__.py
src/workflows/: __init__.py
src/workflows/community/: __init__.py
src/workflows/examples/: __init__.py
src/workflows/official/: __init__.py
src/workflows/official/content_creation/: content_creation_crew.py
src/workflows/official/content_creation/blog_post_workflow/: crew.py  main.py
src/workflows/official/content_creation/blog_post_workflow/config/: agents.yaml  tasks.yaml
src/workflows/official/research/ai_development/: __init__.py  crew.py  main.py
src/workflows/official/research/ai_development/config/: agents.yaml  tasks.yaml
src/workflows/official/research/ai_development/tools/: __init__.py  custom_tool.py
tests/: __init__.py  test_config.py  test_crew_manager.py  test_workflow_monitor.py
